Fixed up styles on About page so it looks ok on mobile, updated copy.

--- a/styles/About.module.scss
+++ b/styles/About.module.scss
@@ -1,16 +1,15 @@
-
 .about {
+    box-sizing: border-box;
     width:100%;
     padding: 8px 16px;
+
+    p {
+        word-wrap: break-word;
+    }
 }
-.about table {
-    display: block;
-    width: 100%;
-}
-.about td {
-    padding: 10px 5px;
-    word-wrap: break-word;
-}
-.about td:first-child {
-    text-align: right;
+
+.contact {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
