--- a/styles/Footer.module.scss
+++ b/styles/Footer.module.scss
@@ -1,7 +1,7 @@
 .footer{
   p {
     position:fixed;
-    left:10px;
+    left:16px;
     bottom:53px;
     font-size:12pt;
     text-align:left;
